--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@
   --secondary-title-color: #212121;
 }
 body {
-  background-color: #e5e5e5;
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
 }
@@ -61,16 +60,14 @@ img {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
 }
 
 /* --------------------HERO-------------------- */
 
 .hero {
   background-color: var(--background-section-color);
-}
-.hero-container {
-  display: flex;
+  text-align: center;
 }
 .hero-title {
   font-weight: 900;
@@ -85,8 +82,6 @@ img {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
@@ -102,15 +97,7 @@ img {
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   border-radius: 4px;
-  width: 200px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 10px 32px 10px 32px;
-  margin-top: 430px;
-  margin-left: 700px;
-  margin-right: 700px;
 }
 .btn-light {
   color: var(--primary-white-color);
@@ -142,8 +129,6 @@ img {
   border-bottom: 1px solid #ececec;
   padding-top: 24px;
   padding-bottom: 25px;
-  padding-left: 215px;
-  padding-right: 215px;
 }
 .menu-list {
   display: flex;
