--- a/css/styles.css
+++ b/css/styles.css
@@ -64,10 +64,10 @@ img {
 }
 
 /* --------------------HERO-------------------- */
-
 .hero {
   background-color: var(--background-section-color);
   text-align: center;
+  height: 600px;
 }
 .hero-title {
   font-weight: 900;
@@ -77,6 +77,9 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
+ margin: 200px 452px 0px 452px;
+  width: 696px;
+  height: 120px;
 }
 .hero-text {
   font-weight: bold;
@@ -98,6 +101,9 @@ img {
   background-color: var(--accent-color);
   border-radius: 4px;
   padding: 10px 32px 10px 32px;
+  margin-top: 40px;
+  margin-left: 700px;
+  margin-right: 700px;
 }
 .btn-light {
   color: var(--primary-white-color);
@@ -199,8 +205,10 @@ img {
   color: var(--primary-white-color);
 }
 
-/* --------------------SECTION1-------------------- */
-
+/* --------------------SECTION-------------------- */
+.section-features {
+  display: flex;
+}
 .section-title {
   font-weight: bold;
   font-size: 14px;
@@ -210,15 +218,27 @@ img {
   color: var(--primary-text-color);
 }
 .section-text {
+  margin-top: 10px;
+  margin-right: 30px;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 /* --------------------DESC-------------------- */
-
+.desc-img {
+  display: flex;
+  padding-top: 50px;
+}
+.desc-img-title {
+  margin-right: 30px;
+}
 .desc-title {
   font-weight: bold;
   font-size: 36px;
@@ -226,6 +246,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  text-align: center;
 }
 .desc-text {
   font-weight: normal;
