--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
- margin: 200px 452px 0px 452px;
+  margin: 200px 452px 0px 452px;
   width: 696px;
   height: 120px;
 }
@@ -226,6 +226,9 @@ img {
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
+.section-text:last-child {
+  margin-right: 0;
+}
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -238,6 +241,9 @@ img {
 }
 .desc-img-title {
   margin-right: 30px;
+}
+.desc-img-title:last-child {
+  margin-right: 0;
 }
 .desc-title {
   font-weight: bold;
