--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ img {
 .hero {
   background-color: var(--background-section-color);
   text-align: center;
-  height: 600px;
+  padding: 200px 0;
 }
 .hero-title {
   font-weight: 900;
@@ -77,6 +77,8 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
+  width: 696px;
+  margin: 0 auto;
 }
 .hero-text {
   font-weight: bold;
@@ -192,7 +194,6 @@ img {
   color: var(--accent-color);
   margin-right: 93px;
 }
-
 .dark-color {
   color: var(--primary-text-color);
 }
@@ -234,7 +235,6 @@ img {
 /* --------------------DESC-------------------- */
 .desc-img {
   display: flex;
-  padding-top: 50px;
 }
 .desc-img-title {
   margin-right: 30px;
@@ -250,6 +250,7 @@ img {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   text-align: center;
+  margin-bottom: 50px;
 }
 .desc-text {
   font-weight: normal;
@@ -266,12 +267,22 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.desc-img-border {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  border-bottom: 30px solid #ffffff;
 }
 
 /* --------------------FOOTER-------------------- */
 
 .footer {
   background-color: var(--background-section-color);
+  padding: 60px 0;
+  display: flex;
 }
 
 .address {
@@ -295,7 +306,14 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
+.footer-logo {
+  font-family: "Raleway";
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
 /* --------------------PORTFOLIO-------------------- */
 
 .portfolio-title {
