--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,9 @@ img {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  padding: 6px 22px;
+  border-radius: 4px;
+  border: solid #f5f4fa;
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -342,10 +345,25 @@ img {
 }
 .portfolio-nav {
   display: flex;
-  padding: 6px auto 6px auto;
+  justify-content: center;
+  margin-bottom: 50px;
 }
-/* .portfolio-btn-title {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-} */
+.portfolio-btn-title:not(:last-child) {
+  margin-right: 8px;
+}
+.portfolio-main {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+.portfolio-main-title {
+  flex-basis: calc (100% / 3 - 30px);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio-frame {
+  padding: 20px 24px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
