Готовое дз с поправками

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,9 @@ img {
 }
 
 /* --------------------SECTION-------------------- */
+.section-after-hero {
+  padding-bottom: 94px;
+}
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
