--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,16 @@ img {
   background-color: var(--background-section-color);
   text-align: center;
   padding: 200px 0;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero.jpg);
+    width: 1600px;
+    margin: 0 auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .hero-title {
   font-weight: 900;
@@ -251,6 +261,7 @@ img {
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   margin-top: 10px;
+  margin-bottom: 16px;
 }
 .desc-title-text {
   font-weight: 500;
@@ -270,7 +281,37 @@ img {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-
+.social-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+.social-item:last-child {
+  margin-right: 0;
+}
+.social-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+.social-icon {
+  fill: #afb1b8;
+}
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: #ffffff;
+}
 /* --------------------FOOTER-------------------- */
 
 .footer {
